--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-bertopic==0.9.4
-networkx==2.6.3
-numpy==1.22.0
-pandas==1.3.5
-plotly==5.5.0
-pyvis==0.1.9
-scikit_learn==1.0.2
-sentence_transformers==2.1.0
-setuptools==58.0.4
-ipywidgets==7.6.5
+bertopic
+networkx
+numpy
+pandas
+plotly
+pyvis
+scikit_learn
+sentence_transformers
+setuptools
+ipywidgets
